[package]
name = "ncm-lyric-crawer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
symphonia = { version = "^0.5", features = ["all"] }

futures = "0.3"
tokio = { version = "1.40", features = ["full"] }
async-tungstenite = { version = "0.28", features = ["tokio-runtime"] }
anyhow = "1"
amll-lyric = "0.2"
reqwest = "0.12"
clap = { version = "4", features = ["derive"] }
prodash = { version = "29", features = ["render-tui", "render-tui-crossterm"] }
soft-aes = "0.2"
base64 = "0.22"
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
strip = true
